fixed android not showing buttons

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -307,7 +307,8 @@ div {
   opacity: 0;
 }
 
-@media only screen and (min-width: 1224px) {
+/* @media only screen and (min-width: 1334px) { */
+@media (hover: hover) and (pointer: fine) {
   #mobile {
     display: none;
   }
